modified to work with fish

--- a/mongod_local.conf
+++ b/mongod_local.conf
@@ -1,10 +1,10 @@
 storage:
-    dbPath: "$HOME/db/data"
+    dbPath: "db/data"
     #journal:
     #    enabled: true
 systemLog:
     destination: file
-    path: "$HOME/db/data/mongodb.log"
+    path: "db/data/mongodb.log"
     logAppend: true
 processManagement:
     fork: true
